text and icon modifications

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio de Xavier Decaudin, présentant mes projets et mes compétences."
+      content="Portfolio de Mohamed BOUAZAMOUR, présentant mes projets et mes compétences."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -17,21 +17,21 @@
       {
         "@context": "https://schema.org/",
         "@type": "Person",
-        "name": "Xavier Decaudin",
-        "url": "https://portfolio-xdecaudin-dev.vercel.app/",
-        "@id": "https://portfolio-xdecaudin-dev.vercel.app/",
-        "telephone":"06 38 05 61 08",
-        "jobTitle": "Développeur Web",
+        "name": "Mohamed BOUAZAMOUR",
+        "url": "https://simohbz.github.io/Projet8_Portfolio/",
+        "@id": "https://simohbz.github.io/Projet8_Portfolio/",
+        "telephone":"06 68 52 55 77",
+        "jobTitle": "Développeur Web Full_Stack",
         "sameAs": [
-          "https://www.linkedin.com/in/xavier-decaudin-947021289/",
-          "https://github.com/decaudin",
+          "https://www.linkedin.com/in/mohamed-bouazamour",
+          "https://github.com/SimohBz",
         ],
       }
     </script>
     <!-- Ajout des balises Open Graph meta -->
-    <meta property="og:title" content="Mohamed BOUAZAMOUR | Développeur Web">
+    <meta property="og:title" content="Mohamed BOUAZAMOUR | Développeur Web Full_Stack">
     <meta property="og:description" content="Portfolio de Mohamed BOUAZAMOUR, présentant mes projets et mes compétences.">
-    <meta property="og:url" content="https://portfolio-xdecaudin-dev.vercel.app/">
+    <meta property="og:url" content="https://simohbz.github.io/Projet8_Portfolio/ ">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="fr_FR">
     <meta property="author" content="Mohamed BOUAZAMOUR">
@@ -40,7 +40,7 @@
     <meta name="twitter:site" content="Mohamed BOUAZAMOUR">
     <meta name="twitter:description" content="Portfolio de Mohamed BOUAZAMOUR, présentant mes projets et mes compétences.">
     <meta name="twitter:creator" content="Mohamed BOUAZAMOUR">
-    <meta name="twitter:domain" content="portfolio-xdecaudin-dev.vercel.app">
+    <meta name="twitter:domain" content="https://simohbz.github.io/Projet8_Portfolio/">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
